--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,14 +1,12 @@
 <header class="masthead">
   <div class="masthead__inner-wrap">
-    <!-- زر القائمة (الهاتف) -->
     <button class="masthead__menu-toggle" aria-label="فتح القائمة" aria-controls="primary-menu" aria-expanded="false">
       <span class="fa fa-bars" aria-hidden="true"></span>
     </button>
 
-    <!-- روابط التنقل -->
     <nav id="site-nav" class="greedy-nav" role="navigation" aria-label="التنقل الرئيسي">
       <ul id="primary-menu" class="visible-links">
-        {% for link in site.data.navigation %}
+        {% for link in site.data.navigation.main %}
           {% if link.children %}
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" aria-haspopup="true" aria-expanded="false">
